Corrected issues with buttons tex alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -41,33 +41,32 @@ a {
 }
 
 #nameWrapper {
-  padding: 2.5em;
+  padding: 2.5vw;
 }
 
 h1 {
-  letter-spacing: .2em;
-  font-size: 1em;
+  letter-spacing: .2vw;
+  font-size: .8vw;
   font-weight: 900;
 }
 
 h2 {
   font-weight: 300;
-  font-size: 2em;
+  font-size: 1.5vw;
   color: white;
 
-  padding-bottom: 1em;
+  padding-bottom: 1.5vw;
 }
 
 .button {
-  width: 5em;
-  height: 1.875em;
+  width: 3.5vw;
+  height: 1.5vw;
   background: black;
-  border-radius: 0.188em;
-
+  border-radius: 0.1vw;
 
   color: white;
   font-weight: 700;
-  font-size: .8em;
+  font-size: .5vw;
   font-family: 'Lato', sans-serif;
 }
 
@@ -91,9 +90,8 @@ h2 {
 .button p {
   color: white;
   font-weight: 700;
-  font-size: .8em;
   font-family: 'Lato', sans-serif;
-  letter-spacing: .1em;
+  letter-spacing: .05vw;
 }
 
 #centerWrapper {
@@ -217,13 +215,13 @@ section {
 }
 
 h3 {
-  font-size: 2em;
-  line-height: 1.2em;
+  font-size: 1.5vw;
+  line-height: 1.6vw;
 }
 
-section p {
+#biography {
   font-family: 'Lora', serif;
-  font-size: 1.2em;
+  font-size: 1vw;
   line-height: 1.5em;
   padding-top: 1.5em;
 
